# myanmar-tools

./: .gitignore  .travis.yml  LICENSE.md  Makefile  README.md  RELEASING.md  Sample.php  composer.json  myanmartools.podspec
.github/workflows/: fuzz.yml  mynmr_tools_ci.yml
clients/c#/: .gitignore  MyanmarTools.sln  README.md
clients/c#/MyanmarTools/: MyanmarTools.csproj  Phase.cs  Rule.cs  ZawgyiConverter.cs  ZawgyiDetector.cs
clients/c#/MyanmarTools.Test/: MyanmarTools.Test.csproj  TransliterateTest.cs  ZawgyiDetectorTest.cs
clients/c#/MyanmarTools/Markov/: BinaryMarkov.cs  ZawgyiUnicodeMarkovModel.cs
clients/c#/MyanmarTools/Transliterate/: Transliterate.cs  TransliterateU2Z.cs  TransliterateZ2U.cs  TransliterateZNorm.cs
clients/c#/MyanmarTools/Utils/: BigEndianBinaryReader.cs
clients/c#/Resources/: mmgov_zawgyi_src.txt  udhr_mya_unicode_src.txt
clients/cpp/: .gitignore  CMakeLists.txt  README.md  build_model_h.cpp  build_model_inc.cpp  zawgyi_detector-impl.h  zawgyi_detector.cpp  zawgyi_detector.h  zawgyi_detector_fuzz_target.cpp  zawgyi_detector_unittest.c  zawgyi_detector_unittest.cpp  zawgyi_model_data.h
clients/cpp/cmake/: HunterGate.cmake
clients/cpp/public/: myanmartools.h
clients/dart/: LICENSE.md  README.md  pubspec.yaml
clients/dart/lib/: myanmar_tools.dart
clients/dart/lib/src/: phase.dart  rule.dart  zawgyi_converter.dart  zawgyi_detector.dart
clients/dart/lib/src/markov/: binary_markov.dart  zawgyi_unicode_markov_model.dart
clients/dart/lib/src/transliterate/: transliterate.dart  transliterate_u2z.dart  transliterate_z2u.dart  transliterate_znorm.dart
clients/dart/resources/: compatibility.tsv  udhr_mya_zawgyi_out.txt
clients/dart/test/: transliterate_test.dart  zawgyi_detector_test.dart
clients/go/: README.md  binary_markov.go  go.mod  resources.go  zawgyi_detector.go  zawgyi_detector_test.go  zawgyi_unicode_markov_model.go
clients/go/internal/resources/: resources.go
clients/java/: .classpath  .project  README.md  pom.xml
clients/java/src/main/java/com/google/myanmartools/: BinaryMarkov.java  Phase.java  Rule.java  Transliterate.java  TransliterateU2Z.java  TransliterateZ2U.java  TransliterateZNorm.java  ZawgyiDetector.java  ZawgyiUnicodeMarkovModel.java
clients/java/src/test/java/com/google/myanmartools/: ConverterBenchmark.java  LoadTest.java  (+2 more)
clients/js/: .gitignore  .npmignore  README.md  gulpfile.js  index.js  package-lock.json  package.json  tsconfig.json
clients/js/resources/: U2Z.js  Z2U.js  ZNorm.js  udhr_mya_zawgyi_out.txt
clients/js/spec/: zawgyi_converter_spec.js  zawgyi_detector_spec.js
clients/js/src/: zawgyi_converter.ts  zawgyi_detector.ts
clients/php/: LICENSE  README.md  Sample.php  composer.json  index.php  phpunit.xml
clients/php/resources/: compatibility.tsv
clients/php/src/: BinaryMarkov.php  ZawgyiDetector.php  ZawgyiUnicodeMarkovModel.php
clients/php/tests/: ZawgyiDetectorTest.php
clients/python/: .gitignore  MANIFEST.in  README.rst  setup.py
clients/python/src/myanmartools/: __init__.py  _params.py  zawgyi_detector.py
clients/python/src/myanmartools/resources/: __init__.py
clients/python/tests/: __init__.py  test_zawgyi_detector.py
clients/ruby/: .gitignore  Gemfile  LICENSE.txt  README.md  Rakefile  myanmar-tools.gemspec  zawgyidetector.gemspec
clients/ruby/lib/: myanmar-tools.rb  zawgyidetector.rb
clients/ruby/lib/myanmar-tools/: binary_markov.rb  version.rb  zawgyi_unicode_markov_model.rb
clients/ruby/test/: zawgyidetector_test.rb
clients/ruby/zawgyidetector/: .gitignore  CODE_OF_CONDUCT.md  README.md  zawgyidetector.gemspec
clients/ruby/zawgyidetector/lib/zawgyidetector/: version.rb  zawgyi_unicode_markov_model.rb
clients/ruby/zawgyidetector/test/: zawgyidetector_test.rb
clients/swift/: .gitignore  Package.swift  README.md
clients/swift/Sources/CMyanmarTools/: module.modulemap
clients/swift/Sources/MyanmarTools/: MyanmarTools.swift
clients/swift/Tests/: LinuxMain.swift
clients/swift/Tests/MyanmarToolsTests/: MyanmarToolsTests.swift  XCTestManifests.swift
clients/swift/myanmartools/: LICENCE.md  myanmartools.h
clients/swift/myanmartools.xcodeproj/: project.pbxproj
clients/swift/myanmartools.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
clients/swift/myanmartools.xcodeproj/xcshareddata/xcschemes/: myanmartools.xcscheme
clients/swift/myanmartools/src/: Extension.swift  ZawGyiDetector.swift  ZawgyiUnicodeMarkovModel.swift
clients/swift/myanmartoolsTests/: myanmartoolsTests.swift
clients/swift/myanmartoolsTests/resources/: compatibility.tsv
data/: .gitignore  .project  pom.xml
data/src/main/java/com/google/myanmartools/: BinaryMarkovBuilder.java  GenerateCompatibilityTSV.java  GenerateTestDataTSV.java  GenerateZawgyiUnicodeModelDAT.java
data/src/test/java/com/google/myanmartools/: BinaryMarkovClassifierTest.java  MarkovChainTest.java  TestObjects.java  ZawgyiDetectorTestingDataTest.java
genconvert/: .classpath  .project  pom.xml
genconvert/input/: my-t-my-d0-zawgyi.txt  my-t-my-s0-zawgyi.txt  my_normalize_zawgyi_transliteration_rules.txt
genconvert/output/: README.md  udhr_mya_zawgyi_out.txt
genconvert/output/js/: U2Z.js  UZ_tests.js  Z2U.js  ZNorm.js  runPhase.js  test_Zawgyi_Unicode_convert.js
genconvert/src/main/java/com/google/myanmartools/: CompileTranslit.java  CompileTranslitToJavascript.java  Dummy.java  TransliterateFile.java
genconvert/src/test/java/com/google/myanmartools/: DummyTest.java  PlaceholderTest.java
samples/: demo.cpp
samples/cpp/: Makefile  demo.cpp
samples/java/: demo.java
samples/node/: index.js  package.json
samples/php/: Demo.php  composer.json
samples/ruby/: Gemfile  demo.rb
training/: .classpath  .gitignore  .project  README.md  pom.xml
training/src/main/java/com/google/myanmartools/: BinaryMarkovBuilder.java  BurmeseData.java  GenerateCompatibilityTSV.java  GenerateZawgyiUnicodeModelDAT.java  ZawgyiUnicodeMarkovModelBuilder.java
training/src/test/java/com/google/myanmartools/: MarkovChain.java  ZawgyiDetectorTestingDataTest.java  ZawgyiUnicodeMarkovModelTest.java
(+21 files in other folders)
